cmake_minimum_required(VERSION 3.26)
project(DM3_le_jeu_du_juste_prix)

set(CMAKE_CXX_STANDARD 14)

add_executable(DM3_le_jeu_du_juste_prix
        .idea/.gitignore
        .idea/DM3_le_jeu_du_juste_prix.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        DM3_BR.c)
